--- a/auctions/templates/auctions/layout.html
+++ b/auctions/templates/auctions/layout.html
@@ -84,13 +84,17 @@
             <a class="nav-link" href="{% url 'default_home' %}">Home</a>
             <a class="nav-link" href="{% url 'index' %}">Active Listings</a>
             <a class="nav-link" href="{% url 'categories' %}">Search</a>
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+    
             {% if user.is_authenticated %}
                 <a class="nav-link" href="{% url 'create' %}">Create Listing</a>
-                <a class="nav-link" href="{% url 'watchlist' %}">WatchList <span class="badge bg-info">{{ user.watchlist_counter }}</span>
+                <a class="nav-link" href="{% url 'watchlist' %}">WatchList 
+                    <span class="badge bg-info">{{ user.watchlist_counter }}</span>
+                </a>
             {% endif %}
-            </a>
-            </div>
         </div>
+    </div>
+    
     </div>
     <div class="user-avatar">
         <a href="{% url 'user_profile' %}">
@@ -165,9 +169,6 @@
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     &copy; <a class="border-bottom" href="#">Car Mart Lanka</a>, All Rights Reserved.
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
-                    <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
                 </div>
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
